--- a/css/_style.css
+++ b/css/_style.css
@@ -37,7 +37,8 @@
   width: 350px;
   display: flex;
   align-items: center;
-  padding-left: 20px;
+  padding: 0.375rem 0.75rem;
+
 
 }
 
@@ -46,6 +47,9 @@
   opacity: 0.1;
 }
 
+.message {
+  position: relative;
+}
 .form__group {
   display: flex;
   flex-direction: column;
@@ -54,14 +58,14 @@
 
 }
 
-.form__control:focus {
-  outline: none;
-}
 
 .form__control--message {
+  top: 20px;
+  position: absolute;
   border: 2px solid var(--orange);
   margin-top: 20px;
   resize: none;
+  
 
 }
 
