--- a/css/_style.css
+++ b/css/_style.css
@@ -1,4 +1,4 @@
-.title__register {
+.title__form {
   color: var(--orange);
   font-weight: 600;
   text-transform: uppercase;
@@ -6,11 +6,11 @@
   text-align: center;
   
 }
-.form__container {
+.form__container, .form__contact{
   border: 4px solid var(--orange);
   font-family: var(--primary-font); 
-  padding: 0.75;
-  width: 24.8rem;
+  padding: 1rem;
+  width: 25rem;
   height: 25.7rem;
   
 }
@@ -37,7 +37,7 @@
   width: 350px;
   display: flex;
   align-items: center;
-  padding: 0.375rem 0.75rem;
+  padding: 0.500rem 0.75rem;
 
 
 }
@@ -65,20 +65,29 @@
   border: 2px solid var(--orange);
   margin-top: 20px;
   resize: none;
+  width: 22.9rem;
+  height: 6.8rem;
+  outline: none;
   
 
 }
 
 .button__register {
-  box-shadow: 0 0 0px 4px var(--orange);
+  box-shadow: 0 0 0px 2.5px var(--orange);
   border: 2px solid var(--white);
   transform: all 0.5s;
   background-color: var(--orange);
   color: var(--white);
   font-size: 20px;
-  width: 6.25rem;
-  height: 3rem;
+  width: 5rem;
+  height: 2.3rem;
   border-radius: 0.25rem;
-  margin-top: 4.8rem;
-  margin-left: 20px;
+  margin-top: 10rem;
+  margin-left: 3px;
+  transition: 0.2s;
+}
+
+.button__register:hover {
+  background-color: var(--white);
+  color: var(--orange);
 }
