--- a/css/_style.css
+++ b/css/_style.css
@@ -1,3 +1,20 @@
+.button__options {
+  text-transform: uppercase;
+  padding: 1.25rem;
+  transition: all .5s;
+  background-color: var(--white);
+  border: 2px solid var(--orange);
+  color: var(--orange);
+  font-weight: bold;
+  margin: 0 0.625rem;
+  cursor: pointer;
+  margin-left: 3.125rem;
+  font-size: 1.063rem;
+}
+
+
+
+
 .title__form {
   color: var(--orange);
   font-weight: 600;
