--- a/css/_variables.css
+++ b/css/_variables.css
@@ -3,4 +3,5 @@
   --orange: #E67817; 
   --white: #ffff;
   --primary-font: 'Be Vietnam Pro', sans-serif;
+  --orange-rgba: rgba(230, 120, 23, 0.1);
 }
