--- a/css/_style.css
+++ b/css/_style.css
@@ -86,6 +86,7 @@
   top: 20px;
   width: 22.9rem;
   padding-left: 0.625rem;
+  color: var(--orange);
   
 
 }
@@ -96,8 +97,8 @@
   border: 2px solid var(--white);
   box-shadow: 0 0 0px 2.5px var(--orange);
   color: var(--white);
-  font-size: 20px;
-  height: 2.3rem;
+  font-size: 16px;
+  height: 2rem;
   margin-left: 3px;
   margin-top: 11rem;
   transform: all 0.5s;
