--- a/css/_style.css
+++ b/css/_style.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .button__options {
   background-color: var(--white);
   border: 2px solid var(--orange);
@@ -6,10 +12,22 @@
   font-size: 1.063rem;
   font-weight: bold;
   margin-left: 3.125rem;
-  margin: 0 0.625rem;
   padding: 1.25rem;
   text-transform: uppercase;
   transition: all .5s;
+}
+
+.container {
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
+}
+
+.container > .options {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .title__form {
@@ -19,7 +37,7 @@
   text-align: center;
   text-transform: uppercase;
 }
-.form__container, .form__contact{
+.form__container{
   border: 4px solid var(--orange);
   font-family: var(--primary-font); 
   height: 25.7rem;
@@ -28,9 +46,9 @@
   
 }
 
-/* ::placeholder {
-  color: var(--orange);
-} */
+.active {
+  display: none;
+}
 
 .form__group {
   position: relative;
