--- a/css/_style.css
+++ b/css/_style.css
@@ -14,13 +14,20 @@
   margin-left: 3.125rem;
   padding: 1.25rem;
   text-transform: uppercase;
-  transition: all .5s;
+  transition: 0.5s;
+}
+
+
+.button__options:hover {
+  background-color: var(--orange);
+  color: var(--white);
 }
 
 .container {
   display: flex;
   margin-top: 50px;
   justify-content: center;
+
 }
 
 .container > .options {
@@ -37,6 +44,7 @@
   text-align: center;
   text-transform: uppercase;
 }
+
 .form__container{
   border: 4px solid var(--orange);
   font-family: var(--primary-font); 
@@ -46,8 +54,12 @@
   
 }
 
-.active {
+.form {
   display: none;
+}
+
+.form--active {
+  display: block;
 }
 
 .form__group {
@@ -102,11 +114,10 @@
   position: absolute;
   resize: none;
   top: 20px;
-  width: 22.9rem;
+  width: 21.9rem;
   padding-left: 0.625rem;
   color: var(--orange);
   
-
 }
 
 .button__register {
@@ -119,7 +130,6 @@
   height: 2rem;
   margin-left: 3px;
   margin-top: 11rem;
-  transform: all 0.5s;
   transition: 0.2s;
   width: 5rem;
 }
