--- a/css/_style.css
+++ b/css/_style.css
@@ -4,23 +4,28 @@
   padding: 0;
 }
 
-.button__options {
+.button--options {
   background-color: var(--white);
   border: 2px solid var(--orange);
   color: var(--orange);
   cursor: pointer;
   font-size: 1.063rem;
   font-weight: bold;
-  margin-left: 3.125rem;
   padding: 1.25rem;
   text-transform: uppercase;
-  transition: 0.5s;
+  transition:  background-color 0.5s, color 0.5s, padding-right 0.5s;
+  align-self: flex-end;
+
 }
 
+.button--active {
+  padding-right: 2.5rem;
+}
 
-.button__options:hover {
+.button--options:hover {
   background-color: var(--orange);
   color: var(--white);
+
 }
 
 .container {
@@ -120,7 +125,7 @@
   
 }
 
-.button__register {
+.button--register {
   background-color: var(--orange);
   border-radius: 0.25rem;
   border: 2px solid var(--white);
@@ -134,7 +139,10 @@
   width: 5rem;
 }
 
-.button__register:hover {
+.button--register:hover {
   background-color: var(--white);
   color: var(--orange);
 }
+
+
+
